--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ScannerActivity">
 
+    <org.opencv.android.JavaCameraView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/cameraView"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
